# DesignPattern

./: CMakeLists.txt  DesignPattern.sln  README.md
AbstractFactory/: AbstractFactory.cpp  AbstractFactory.h  Blue.cpp  Blue.h  CMakeLists.txt  Circle.cpp  Circle.h  IColor.cpp  IColor.h  IShape.h  Red.cpp  Red.h  Source.cpp  Triangle.cpp  Triangle.h
Adapter/: Adapter.cpp  Adapter.h  Algorithm.h  CMakeLists.txt  ConcreteAlgorihm1.cpp  ConcreteAlgorihm1.h  ConcreteAlgorithm.cpp  ConcreteAlgorithm.h  Source.cpp
Bridge/: Black.cpp  Black.h  CMakeLists.txt  Circle.cpp  Circle.h  Color.h  Red.cpp  Red.h  Shape.h  Source.cpp  Triangle.cpp  Triangle.h
Builder/: CMakeLists.txt  ConcreteProduct.cpp  ConcreteProduct.h  ConcreteProduct1.cpp  ConcreteProduct1.h  Director.cpp  Director.h  Product.h  source.cpp
ChainOfResponsibility/: CMakeLists.txt  ConcreteHandler.cpp  ConcreteHandler.h  ConcreteHandler1.cpp  ConcreteHandler1.h  Handler.cpp  Handler.h  Source.cpp
Command/: CMakeLists.txt  Command.cpp  Command.h  ConcreteCommand.cpp  ConcreteCommand.h  Invoke.cpp  Invoke.h  Receiver.cpp  Receiver.h  Source.cpp
Composite/: CMakeLists.txt  Component.h  Composite.cpp  Composite.h  Leaf.cpp  Leaf.h  source.cpp
Decorator/: CMakeLists.txt  Decorator.cpp  Decorator.h  Department.cpp  Department.h  Door.cpp  Door.h  Furniture.cpp  Furniture.h  House.h  Source.cpp  Villa.cpp  Villa.h
DesignPattern/: DesignPattern.cpp  DesignPattern.vcxproj
Facade/: CMakeLists.txt  Facade.cpp  Facade.h  SubSystem1.cpp  SubSystem1.h  SubSystem2.cpp  SubSystem2.h  SubSystem3.cpp  SubSystem3.h  source.cpp
FactoryMethod/: Add.cpp  Add.h  AddFactory.cpp  AddFactory.h  CMakeLists.txt  IFactory.h  IOperation.cpp  IOperation.h  Source.cpp  SubFactory.cpp  SubFactory.h  subtract.cpp  subtract.h
FactoryMethodPattern/: CMakeLists.txt  Rectangle.cpp  Triangle.cpp  Triangle.h
FactoryPattern/: CMakeLists.txt  Circle.cpp  Circle.h  FactoryMethodPattern.cpp  FactoryPattern.cpp  Rectangle.h  Shape.h  SimpleFactory.cpp  SimpleFactory.h
Flyweight/: CMakeLists.txt  Factory.cpp  Factory.h  Flyweight.cpp  Flyweight.h  Shared.cpp  Shared.h  Source.cpp  UnShared.cpp  UnShared.h
Interpreter/: AbstractOperaction.cpp  AbstractOperaction.h  AddExpression.cpp  AddExpression.h  CMakeLists.txt  Calculator.cpp  Calculator.h  Expression.h  Source.cpp  SubExpression.cpp  SubExpression.h  VarExpression.cpp  VarExpression.h
Mediator/: CMakeLists.txt  Colleague.cpp  Colleague.h  ConcreteColleague1.cpp  ConcreteColleague1.h  ConcreteColleague2.cpp  ConcreteColleague2.h  ConcreteMediator.cpp  ConcreteMediator.h  Mediator.cpp  Mediator.h  Source.cpp
Memo/: Actor.cpp  Actor.h  CMakeLists.txt  Memo.cpp  Memo.h  Source.cpp
Observer/: CMakeLists.txt  ConcreteObserver.cpp  ConcreteObserver.h  ConcreteObserver1.cpp  ConcreteObserver1.h  Observer.cpp  Observer.h  Source.cpp  Subject.cpp  Subject.h
Prototype/: CMakeLists.txt  Concrete1.cpp  Concrete1.h  Concrete2.cpp  Concrete2.h  Prototype.cpp  Prototype.h  Source.cpp
Proxy/: CMakeLists.txt  Proxy.cpp  Proxy.h  RealSubject.cpp  RealSubject.h  Subject.h  source.cpp
SingletonPattern/: CMakeLists.txt  SingleObject.cpp  SingleObject.h  main.cpp
StartegyPattern/: BubbleSortingStategy.cpp  BubbleSortingStategy.h  CMakeLists.txt  InsertionSort.cpp  InsertionSort.h  QuickSortingStategy.cpp  QuickSortingStategy.h  SortingStrategy.cpp  SortingStrategy.h  StrategyPattern.cpp
State/: CMakeLists.txt  Context.cpp  Context.h  PlayState.cpp  PlayState.h  Source.cpp  State.cpp  State.h  StopState.cpp  StopState.h
TemplateMethod/: CMakeLists.txt  Concrete1.h  (+6 more)
(+16 files in other folders)
